V3
se agrega lo que es el dto, los mappers y el exceptions