@@ -1,63 +1,60 @@
 package com.example.libreriaMarketCatalogService.service;
 
-import java.util.List;
 import org.springframework.stereotype.Service;
+import java.util.List;
+
 import com.example.libreriaMarketCatalogService.model.Proveedor;
 import com.example.libreriaMarketCatalogService.repository.ProveedorRepository;
-
-
+import com.example.libreriaMarketCatalogService.exceptions.*;
 
 @Service
 public class ProveedorService {
 
-    private final ProveedorRepository repository;
+    private final ProveedorRepository repo;
 
-    public ProveedorService(ProveedorRepository repository) {
-        this.repository = repository;
+    public ProveedorService(ProveedorRepository repo) {
+        this.repo = repo;
     }
 
-    // listar proveedores
     public List<Proveedor> listar() {
-        return repository.findAll();
+        return repo.findAll();
     }
 
-    // buscar por ID
-    public Proveedor obtenerPorId(Long id) {
-        return repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Proveedor no encontrado"));
+    public Proveedor obtener(Long id) {
+        return repo.findById(id)
+                .orElseThrow(() -> new RecursoNoEncontradoException("Proveedor no encontrado"));
     }
 
-    // crear proveedor
-    public Proveedor guardar(Proveedor proveedor){
+    public Proveedor guardar(Proveedor p) {
 
-    // VALIDACIÓN PRIMERO
-    if(proveedor.getNombre() == null || proveedor.getNombre().trim().isEmpty()){
-        throw new RuntimeException("El nombre no puede estar vacío");
+        if (p.getNombre() == null || p.getNombre().isBlank()) {
+            throw new BadRequestException("Nombre obligatorio");
+        }
+
+        if (repo.existsByNombre(p.getNombre())) {
+            throw new BadRequestException("Proveedor ya existe");
+        }
+
+        return repo.save(p);
     }
 
-    // luego recién consultas BD
-    if(repository.existsByNombre(proveedor.getNombre())){
-        throw new RuntimeException("Ya existe un proveedor con ese nombre");
+    public Proveedor actualizar(Long id, Proveedor p) {
+
+        Proveedor existente = obtener(id);
+        existente.setNombre(p.getNombre());
+        existente.setContacto(p.getContacto());
+
+        return repo.save(existente);
     }
 
-    return repository.save(proveedor);
-    }
+    public void eliminar(Long id) {
 
-    // actualizar proveedor
-    public Proveedor actualizar(Long id, Proveedor proveedor) {
+        Proveedor proveedor = obtener(id);
 
-        Proveedor existente = obtenerPorId(id);
+        if (proveedor.getProductos() != null && !proveedor.getProductos().isEmpty()) {
+            throw new BadRequestException("No se puede eliminar proveedor con productos asociados");
+        }
 
-        existente.setNombre(proveedor.getNombre());
-        existente.setContacto(proveedor.getContacto());
-
-        return repository.save(existente);
-    }
-
-    // eliminar proveedor
-    public String eliminar(Long id) {
-        Proveedor proveedor = obtenerPorId(id);
-        repository.delete(proveedor);
-        return "Proveedor eliminado";
+        repo.delete(proveedor);
     }
 }
